--- a/index.html
+++ b/index.html
@@ -1,452 +1,223 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>NikoAd — Реклама в Telegram</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NikoAd — Реклама в Telegram</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(135deg, #6a0dad, #12005e);
+      color: #f0f0f5;
+      min-height: 100vh;
+      padding: 20px;
+      text-align: center;
+    }
 
-  * {
-    box-sizing: border-box;
-  }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 30px;
+    }
 
-  body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(135deg, #6a0dad, #12005e);
-    color: #f0f0f5;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
-
-  h1 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-weight: 700;
-    letter-spacing: 2px;
-  }
-
-  .channels {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    max-width: 900px;
-    margin-bottom: 40px;
-  }
-
-  .channel-card {
-    background: #2e005e;
-    border-radius: 12px;
-    padding: 20px;
-    width: 220px;
-    cursor: default;
-    box-shadow: 0 4px 15px rgba(106, 13, 173, 0.5);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .channel-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 25px rgba(106, 13, 173, 0.8);
-  }
-
-  .channel-name {
-    font-weight: 700;
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-  }
-
-  .subscribers {
-    font-size: 0.9rem;
-    margin-bottom: 10px;
-    color: #b0a9e6;
-  }
-
-  .btn-show {
-    align-self: flex-start;
-    background: #8a2be2;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 14px;
-    color: white;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.25s ease;
-    margin-top: 10px;
-  }
-
-  .btn-show:hover {
-    background: #bf94ff;
-  }
-
-  /* Форма заявки */
-  form {
-    display: flex;
-    flex-direction: column;
-    max-width: 700px;
-    width: 100%;
-  }
-
-  form input, form textarea, form select {
-    background: #3c007d;
-    border: none;
-    border-radius: 10px;
-    padding: 12px 14px;
-    margin-bottom: 15px;
-    font-size: 1rem;
-    color: #eee;
-    resize: vertical;
-    transition: background-color 0.3s ease;
-  }
-
-  form input::placeholder,
-  form textarea::placeholder {
-    color: #b0a9e6;
-  }
-
-  form input:focus, form textarea:focus, form select:focus {
-    outline: none;
-    background-color: #5a00bc;
-  }
-
-  form button {
-    background: #8a2be2;
-    border: none;
-    border-radius: 10px;
-    padding: 15px;
-    font-size: 1.1rem;
-    font-weight: 700;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-
-  form button:hover {
-    background: #bf94ff;
-  }
-
-  #status {
-    margin-top: 10px;
-    min-height: 22px;
-    font-weight: 700;
-  }
-
-  /* Модальное окно статистики */
-  .modal-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(18,0,94,0.85);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-
-  .modal-bg.active {
-    display: flex;
-  }
-
-  .modal-content {
-    background: #210044;
-    border-radius: 15px;
-    padding: 30px;
-    width: 90%;
-    max-width: 600px;
-    color: #e3dbff;
-    box-shadow: 0 6px 20px rgba(106, 13, 173, 0.9);
-    overflow-y: auto;
-    max-height: 80vh;
-    position: relative;
-  }
-
-  .modal-header {
-    font-weight: 700;
-    font-size: 1.8rem;
-    margin-bottom: 15px;
-  }
-
-  .modal-close {
-    position: absolute;
-    top: 15px;
-    right: 20px;
-    background: #8a2be2;
-    border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    font-weight: 700;
-    color: white;
-    cursor: pointer;
-    font-size: 1.2rem;
-    line-height: 30px;
-    text-align: center;
-    transition: background-color 0.3s ease;
-  }
-
-  .modal-close:hover {
-    background: #bf94ff;
-  }
-
-  .stat-row {
-    margin-bottom: 10px;
-    font-size: 1rem;
-  }
-
-  .stat-row strong {
-    color: #bf94ff;
-  }
-
-  /* Анимации кнопок */
-  button, select, input, textarea {
-    transition: box-shadow 0.3s ease;
-  }
-  button:hover, select:hover, input:hover, textarea:hover {
-    box-shadow: 0 0 8px #bf94ff;
-  }
-
-  /* Адаптив */
-  @media (max-width: 600px) {
     .channels {
-      flex-direction: column;
-      align-items: center;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
     }
 
     .channel-card {
-      width: 90%;
+      background: #2e005e;
+      border-radius: 14px;
+      padding: 20px;
+      width: 230px;
+      transition: transform 0.3s, box-shadow 0.3s;
+      cursor: pointer;
+    }
+
+    .channel-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 8px 25px rgba(106, 13, 173, 0.7);
+    }
+
+    .channel-name {
+      font-weight: 700;
+      font-size: 1.1rem;
+      margin-bottom: 8px;
+    }
+
+    .subscribers {
+      color: #b0a9e6;
+      margin-bottom: 14px;
+    }
+
+    .btn-show {
+      background: #8a2be2;
+      border: none;
+      border-radius: 8px;
+      padding: 8px 12px;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+    }
+
+    .btn-show:hover {
+      background: #bf94ff;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background: rgba(0, 0, 0, 0.7);
     }
 
     .modal-content {
-      max-height: 90vh;
-      padding: 20px;
+      background-color: #240057;
+      margin: 10% auto;
+      padding: 30px;
+      border-radius: 14px;
+      width: 90%;
+      max-width: 600px;
+      text-align: left;
+      color: #fff;
+      position: relative;
+      animation: fadeIn 0.3s ease;
     }
-  }
-</style>
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      font-size: 22px;
+      color: #aaa;
+      cursor: pointer;
+    }
+
+    .close:hover {
+      color: #fff;
+    }
+
+    @media (max-width: 600px) {
+      .channel-card { width: 90%; }
+    }
+  </style>
 </head>
 <body>
 
 <h1>NikoAd — Реклама в Telegram</h1>
+<div class="channels" id="channels"></div>
 
-<div class="channels" id="channels">
-  <!-- Карточки каналов -->
-</div>
-
-<!-- Форма заявки -->
-<form id="orderForm">
-  <h2>Отправить заявку</h2>
-  <input type="text" id="name" name="name" placeholder="Ваше имя" required />
-  <input type="text" id="tg" name="tg" placeholder="Telegram (@никнейм)" required />
-  <textarea id="msg" name="msg" placeholder="Рекламный пост" rows="3" required></textarea>
-
-  <label for="channelSelect">Выберите канал(ы) для рекламы:</label>
-  <select id="channelSelect" name="channels" multiple size="4" required></select>
-
-  <label for="timeSelect">Выберите время размещения:</label>
-  <select id="timeSelect" name="time" required>
-    <option value="24">24 часа</option>
-    <option value="48">48 часов</option>
-    <option value="72">72 часа</option>
-    <option value="forever">Навсегда</option>
-    <option value="story">История</option>
-  </select>
-
-  <div><strong>Итоговая цена: <span id="totalPrice">0 ₽</span></strong></div>
-
-  <button type="submit">Отправить заявку</button>
-  <div id="status"></div>
-</form>
-
-<!-- Модальное окно статистики -->
-<div class="modal-bg" id="modal">
-  <div class="modal-content" id="modalContent">
-    <button class="modal-close" id="modalClose">&times;</button>
-    <div id="modalTitle" class="modal-header"></div>
-    <div id="modalStats"></div>
+<!-- Модалка -->
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <div id="modalText"></div>
   </div>
 </div>
 
 <script>
-  const channelsData = [
+  const channels = [
     {
       id: 'tver',
       name: 'Ищу Тебя Тверь',
       subs: 10500,
-      link: 'https://t.me/ishutebyatverr',
-      prices: {
-        '24': 1550,
-        '48': 1700,
-        '72': 1900,
-        'forever': 2600,
-        'story': 1100
-      },
-      stats: {
-        subscribers: 10500,
-        telegramAds: '4.9',
-        upChannels: 41,
-        mentions: 54,
-        reposts: 109,
-        citationIndex: 2790,
-        ERR24: '24%',
-        avgReach12h: 2100,
-        avgReach24h: 2600,
-        avgReach48h: 2700,
-        channelAge: '1 год 7 месяцев',
-        createdDate: '07.11.2023',
-        addedDate: '13.11.2023',
-        avgRead24h: '24%',
-        ERR: '0.49%',
-        genderMale: '55.8%',
-        genderFemale: '44.2%',
-      }
+      stats: `
+        Средний охват 1 публикации: 2.6k<br>
+        ERR: 26%<br>
+        ERR24: 24%<br>
+        Возраст канала: 1 год 7 месяцев<br>
+        Подписчиков: 16,988<br>
+        ER: 0.49%
+      `
     },
     {
       id: 'nizhnevartovsk',
-      name: 'Ищу Тебя Нижневартовск',
+      name: 'Ищу тебя Нижневартовск',
       subs: 6000,
-      link: 'https://t.me/nizhnevartovsk_dtp',
-      prices: {
-        '24': 1400,
-        '48': 1600,
-        '72': 1800,
-        'forever': 2200,
-        'story': 1100
-      },
-      stats: {
-        subscribers: 6000,
-        ERR: '43.7%',
-        ERR24: '36.3%',
-        avgReach12h: 1800,
-        avgReach24h: 2200,
-        avgReach48h: 2400,
-        channelAge: '2 года 11 месяцев',
-        createdDate: '01.07.2022',
-        addedDate: '01.01.2024',
-        avgRead24h: '37%',
-        genderMale: '',
-        genderFemale: '',
-      }
+      stats: `
+        Средний охват 1 публикации: 2.2k<br>
+        ERR: 44%<br>
+        ERR24: 37%<br>
+        Возраст канала: 2 года 11 месяцев<br>
+        Подписчиков: 12,161<br>
+        ER: 0.73%
+      `
     },
     {
       id: 'niko',
       name: 'NIKO 🇦🇲',
       subs: 3500,
-      link: 'https://t.me/nikotver',
-      prices: {
-        '24': 1000,
-        '48': 1150,
-        '72': 1250,
-        'story': 800
-      },
-      stats: {
-        subscribers: 3500,
-        ERR: '247%',
-        ERR24: '21.7%',
-        avgReach12h: 715,
-        avgReach24h: 773,
-        avgReach48h: 865,
-        channelAge: '1 год 11 месяцев',
-        createdDate: '06.07.2023',
-        addedDate: '28.04.2024',
-        avgRead24h: '22%',
-        genderMale: '',
-        genderFemale: '',
-      }
+      stats: `
+        Средний охват 1 публикации: 773<br>
+        ERR: 247%<br>
+        ERR24: 22%<br>
+        Возраст канала: 1 год 11 месяцев<br>
+        Подписчиков: 23<br>
+        ER: 2.67%
+      `
     },
     {
       id: 'krasnoyarsk',
       name: 'Ищу Тебя Красноярск',
       subs: 3000,
-      link: 'https://t.me/ishutebyakrasnoyarsk',
-      prices: {
-        '24': 800,
-        '48': 1000,
-        '72': 1150,
-        'forever': 1300,
-        'story': 700
-      },
-      stats: {
-        subscribers: 3000,
-        ERR: '38%',
-        ERR24: '20%',
-        avgReach12h: 484,
-        avgReach24h: 574,
-        avgReach48h: 649,
-        channelAge: '1 год 5 месяцев',
-        createdDate: '13.01.2024',
-        addedDate: '17.01.2024',
-        avgRead24h: '20%',
-        genderMale: '',
-        genderFemale: '',
-      }
-    },
+      stats: `
+        Средний охват 1 публикации: 574<br>
+        ERR: 38%<br>
+        ERR24: 20%<br>
+        Возраст канала: 1 год 5 месяцев<br>
+        Подписчиков: 14,095<br>
+        ER: 0.98%
+      `
+    }
   ];
 
-  const channelsContainer = document.getElementById('channels');
-  const channelSelect = document.getElementById('channelSelect');
-  const timeSelect = document.getElementById('timeSelect');
-  const totalPriceSpan = document.getElementById('totalPrice');
-  const orderForm = document.getElementById('orderForm');
-  const statusDiv = document.getElementById('status');
-
+  const container = document.getElementById('channels');
   const modal = document.getElementById('modal');
-  const modalClose = document.getElementById('modalClose');
-  const modalTitle = document.getElementById('modalTitle');
-  const modalStats = document.getElementById('modalStats');
+  const modalText = document.getElementById('modalText');
 
-  // Создаем карточки каналов
-  channelsData.forEach(ch => {
+  channels.forEach(channel => {
     const card = document.createElement('div');
     card.className = 'channel-card';
     card.innerHTML = `
-      <div class="channel-name">${ch.name}</div>
-      <div class="subscribers">Подписчиков: ${ch.subs.toLocaleString()}</div>
-      <button class="btn-show">Показать статистику</button>
+      <div class="channel-name">${channel.name}</div>
+      <div class="subscribers">Подписчиков: ${channel.subs.toLocaleString()}</div>
+      <button class="btn-show" onclick="showStats('${channel.id}')">Показать статистику</button>
     `;
-
-    const btn = card.querySelector('.btn-show');
-    btn.addEventListener('click', () => openModal(ch));
-
-    channelsContainer.appendChild(card);
-
-    // Добавляем в селект для выбора каналов
-    const option = document.createElement('option');
-    option.value = ch.id;
-    option.textContent = ch.name;
-    channelSelect.appendChild(option);
+    container.appendChild(card);
   });
 
-  // Обновляем цену при выборе каналов или времени
-  function updatePrice() {
-    const selectedChannels = Array.from(channelSelect.selectedOptions).map(opt => opt.value);
-    const selectedTime = timeSelect.value;
-    let total = 0;
-    selectedChannels.forEach(id => {
-      const ch = channelsData.find(c => c.id === id);
-      if (!ch) return;
-      if (ch.prices[selectedTime] !== undefined) total += ch.prices[selectedTime];
-    });
-    totalPriceSpan.textContent = total.toLocaleString('ru-RU') + ' ₽';
+  function showStats(id) {
+    const ch = channels.find(c => c.id === id);
+    if (ch) {
+      modalText.innerHTML = `<strong>${ch.name}</strong><br><br>${ch.stats}`;
+      modal.style.display = 'block';
+    }
   }
 
-  channelSelect.addEventListener('change', updatePrice);
-  timeSelect.addEventListener('change', updatePrice);
+  function closeModal() {
+    modal.style.display = 'none';
+  }
 
-  // Модальное окно — показать статистику
-  function openModal(channel) {
-    modalTitle.innerHTML = `<a href="${channel.link}" target="_blank" style="color:#bf94ff; text-decoration:none;">${channel.name}</a>`;
-    // Формируем содержимое статистики
-    let html = `
-      <div class="stat-row"><strong>Подписчиков:</strong> ${channel.stats.subscribers.toLocaleString()}</div>
-      <div class="stat-row"><strong>Telegram Ads:</strong> ${channel.stats.telegramAds || '-'}</div>
-      <div class="stat-row"><strong>Упоминания каналов:</strong> ${channel.stats.upChannels || '-'}</div>
-      <div class="stat-row"><strong>Упоминания:</strong> ${channel.stats.mentions || '-'}</div>
-      <div class="stat
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = 'none';
+    }
+  };
+</script>
+
+</body>
+</html>
